# interface-conditioned-fno

./: .gitignore  LICENSE  README.md  pyproject.toml  测试总结.md
advection_fno/: 1D advection equation test report.md  __init__.py  config.py  data.py  experiment.py  metrics.py  models.py
advection_fno/results/smoke_hidden_width_2/: comparisons.csv  manifest.json  summary.csv
advection_fno/tests/: test_data.py  test_models.py  test_smoke.py
deep_fno_shared_benchmark/: .gitignore  README.md  __init__.py  build_v2_notebooks.py  checkpoint.py  compare_three_models_main_v2.ipynb  config.py  data.py  experiment.py  formal_v2.py  gpu_smoke_v2.py  implementation_plan_v2.md  metrics.py  models.py  remote_validate_v2.sh  requirements.txt  train_fno_gamma_main_v2.ipynb  train_fno_main_v2.ipynb  train_shared_oracle_main_v2.ipynb  train_shared_oracle_rho0_main_v2.ipynb  training.py  v2_same_seed_sample_comparison.ipynb  v2_sample_comparison.py
deep_fno_shared_benchmark/results/formal_main_v2/comparison_four_models/: comparison_manifest.json  figure_qa.csv  four_model_main_v2_comparison_report.md
deep_fno_shared_benchmark/results/formal_main_v2/comparison_four_models/source_data/: artifact_audit.csv  figure1_primary_contrasts.csv  figure2_superresolution.csv  figure3_metric_heatmap.csv  figure4_representative_profiles.csv  figure5_rho_summary.csv  formal_protocol_v2.csv  main_results_table.csv  paired_hierarchical_bootstrap.csv  subgroup_contrasts.csv  (+2 more)
deep_fno_shared_benchmark/tests/: __init__.py  test_data.py  test_metrics.py  test_models.py  test_smoke.py  test_v2.py
