[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "advection-feature-fno"
version = "0.1.0"
description = "Feature-conditioned linear Fourier operators for discontinuous 1D advection"
requires-python = ">=3.10"
dependencies = [
  "jax>=0.4",
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "optax>=0.2",
]

[tool.setuptools]
packages = ["advection_fno"]
